[package]
name = "jlang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
pest = "2.7.4"
pest_derive = "2.7.4"
fancy-regex = "0.13.0"
swc = "0.285.0"
swc_common = "0.37.5"
swc_ecma_ast = "0.118.2"
swc_ecma_parser = "0.149.1"
swc_ecma_transforms_typescript = "0.198.1"
swc_ecma_visit = "0.104.8"
anyhow = "1.0.86"
